tests/baselines/reference/objectLiteralShorthandPropertiesAssignmentErrorFromMissingIdentifier.errors.txt
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentErrorFromMissingIdentifier.ts(4,43): error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ b: 文字; id: 数字; }'.
  Object literal may only specify known properties, and 'name' does not exist in type '{ b: 文字; id: 数字; }'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentErrorFromMissingIdentifier.ts(5,72): error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ name: 数字; id: 文字; }'.
  Types of property 'name' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentErrorFromMissingIdentifier.ts(8,5): error TS2322: Type '{ name: 数字; id: 文字; }' is not assignable to type '{ name: 文字; id: 数字; }'.
  Types of property 'name' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentErrorFromMissingIdentifier.ts (3 errors) ====
    var id: number = 10000;
    var name: string = "my name";
    
    var person: { b: string; id: number } = { name, id };  // error
                                              ~~~~
!!! error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ b: 文字; id: 数字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'name' does not exist in type '{ b: 文字; id: 数字; }'.
    function bar(name: string, id: number): { name: number, id: string } { return { name, id }; }  // error
                                                                           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ name: 数字; id: 文字; }'.
!!! error TS2322:   Types of property 'name' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    function foo(name: string, id: number): { name: string, id: number } { return { name, id }; }  // error
    var person1: { name, id }; // ok
    var person2: { name: string, id: number } = bar("hello", 5);
        ~~~~~~~
!!! error TS2322: Type '{ name: 数字; id: 文字; }' is not assignable to type '{ name: 文字; id: 数字; }'.
!!! error TS2322:   Types of property 'name' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    